feat: add payment routes on swagger
